examples/kubeflow/mnist_with_tfjob/data-lineage-example3/kustomize/tf-job-operator/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tf-job-dashboard
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /tfjobs/
    rewrite:
      uri: /tfjobs/
    route:
    - destination:
        host: tf-job-dashboard.$(namespace).svc.$(clusterDomain)
        port:
          number: 80
